cmake_minimum_required(VERSION 4.0)
project(LabAssignments)

set(CMAKE_CXX_STANDARD 20)

add_executable(LabAssignments "Lab14 - Class & Constructors/main.cpp"
        "Lab14 - Class & Constructors/Artist.h"
        "Lab14 - Class & Constructors/Artwork.h"
        "Lab14 - Class & Constructors/Artwork.cpp"
        "Lab14 - Class & Constructors/Artist.cpp")
